[package]
name = "rust_wal"
version = "0.1.0"
authors = ["Arun Sharma <arun@sharma-home.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.57.0"

[dependencies]
async-raft = "0.6.0"
anyhow = "1.0.32"
serde = { version="1.0.124", features=["derive"] }
serde_derive = "1.0.124"
serde-big-array = "0.3.1"
serde_json = "1.0.57"
structopt = "0.3"
thiserror = "1.0.20"
tokio = { version="1.3.0", default-features=false, features=["full"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"
